[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "text_cleaner_for_py"
version = "1.4.1"
description = "​💬​ Uma biblioteca Python para limpeza e processamento de texto"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "nltk>=3.8.1",
    "beautifulsoup4>=4.12.2",
    "emoji>=2.8.0",
    "langdetect>=1.0.9",
    "torch>=2.0.0",
    "redis>=4.5.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/robertolima-dev/text-cleaner-for-py"
Repository = "https://github.com/robertolima-dev/text-cleaner-for-py"
Issues = "https://github.com/robertolima-dev/text-cleaner-for-py/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"